--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-#Build is the same as Tags (see releases section)
+#Build is the same as Tags (see releases section in GitHub web interface)
 build/
